k8s/environments/zipkin/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zipkin-ingress
  labels:
    env: production
    tier: backend
    app: zipkin
spec:
  ingressClassName: nginx # <- NGINX Ingress Controller를 사용
  rules:
  - host: zipkin.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zipkin
            port:
              number: 9411
